Added work section and about myself section. Also styled the sections using grid and flexbox.

--- a/index.html
+++ b/index.html
@@ -223,36 +223,36 @@
 			<a href="#" class="btn">Get my resume</a>
 			<ul class="my-skills">
 				<li class="languages skill-section">
-					<li class="skill-title">
+					<div class="skill-title">
 						<h3>Languages</h3>
 						<span class="drop-icon"><i class="fas fa-angle-down"></i> </span>
-					</li>
-					<li class="lang">
+					</div>
+					<div class="lang">
 						<img src="./images/Ellipse-js.png" alt="javaScript logo" class="img-logo"/>
 							<span class="lang-name">JavaScript</span>
 						
-					</li>
-					<li class="lang">
+					</div>
+					<div class="lang">
 						<img src="./images/Ellipse-HTML.png" alt="javaScript logo" class="img-logo"/>
 							<span class="lang-name">HTML</span>
 						
-					</li>
-					<li class="lang">
+					</div>
+					<div class="lang">
 						<img src="./images/Ellipse-css.png" alt="javaScript logo" class="img-logo" />
 							<span class="lang-name">CSS</span>
-					</li>
+					</div>
 				</li>
 				<li class="frameworks skill-section">
-					<li class="skill-title passive">
+					<div class="skill-title passive">
 						<h3>Frameworks</h3>
 						<span class="drop-icon"><i class="fas fa-angle-right"></i> </span>
-					</li>
+					</div>
 				</li>
 				<li class="skills skill-section">
-					<li class="skill-title passive">
+					<div class="skill-title passive">
 						<h3>Skills</h3>
 						<span class="drop-icon"><i class="fas fa-angle-right"></i> </span>
-					</li>
+					</div>
 				</li>
 			</ul>
 		</section>
