--- a/index.html
+++ b/index.html
@@ -63,19 +63,17 @@
 		<section class="work">
 			<div class="single-card">
 				<img
-					src="/images/SnapshootPortfolio-1.png"
+					src="./images/SnapshootPortfolio-1.png"
 					alt="Portfolio 1 image"
 					class="p-img"
 				/>
 				<div class="about-portfolio">
-					<h1>Tonic</h1>
+					<h2>Tonic</h2>
 					<div class="info-portfolio">
 						<ul class="list">
 							<li class="li">canopy</li>
 							<li>Back End Dev</li>
 							<li>2015</li>
-							<li class="li"></li>
-							<li class="li"></li>
 						</ul>
 					</div>
 					<p>
@@ -94,12 +92,12 @@
 
 			<div class="single-card">
 				<img
-					src="/images/SnapshootPortfolio-2.png"
+					src="./images/SnapshootPortfolio-2.png"
 					alt="Portfolio 1 image"
 					class="p-img"
 				/>
 				<div class="about-portfolio">
-					<h1>Multi-Post Stories</h1>
+					<h2>Multi-Post Stories</h2>
 					<div class="info-portfolio">
 						<ul class="list">
 							<li class="li">canopy</li>
@@ -125,12 +123,12 @@
 
 			<div class="single-card" id="hide-later">
 				<img
-					src="/images/SnapshootPortfolio-3.png"
+					src="./images/SnapshootPortfolio-3.png"
 					alt="Portfolio 1 image"
 					class="p-img"
 				/>
 				<div class="about-portfolio">
-					<h1>Tonic</h1>
+					<h2>Tonic</h2>
 					<div class="info-portfolio">
 						<ul class="list">
 							<li class="li">canopy</li>
@@ -156,12 +154,12 @@
 
 			<div class="single-card">
 				<img
-					src="/images/SnapshootPortfolio-4.png"
+					src="./images/SnapshootPortfolio-4.png"
 					alt="Portfolio 1 image"
 					class="p-img"
 				/>
 				<div class="about-portfolio">
-					<h1>Multi-Post Stories</h1>
+					<h2>Multi-Post Stories</h2>
 					<div class="info-portfolio">
 						<ul class="list">
 							<li class="li">canopy</li>
