Added contact me section in html

--- a/index.html
+++ b/index.html
@@ -226,18 +226,28 @@
 						<span class="drop-icon"><i class="fas fa-angle-down"></i> </span>
 					</div>
 					<div class="lang">
-						<img src="./images/Ellipse-js.png" alt="javaScript logo" class="img-logo"/>
-							<span class="lang-name">JavaScript</span>
-						
+						<img
+							src="./images/Ellipse-js.png"
+							alt="javaScript logo"
+							class="img-logo"
+						/>
+						<span class="lang-name">JavaScript</span>
 					</div>
 					<div class="lang">
-						<img src="./images/Ellipse-HTML.png" alt="javaScript logo" class="img-logo"/>
-							<span class="lang-name">HTML</span>
-						
+						<img
+							src="./images/Ellipse-HTML.png"
+							alt="javaScript logo"
+							class="img-logo"
+						/>
+						<span class="lang-name">HTML</span>
 					</div>
 					<div class="lang">
-						<img src="./images/Ellipse-css.png" alt="javaScript logo" class="img-logo" />
-							<span class="lang-name">CSS</span>
+						<img
+							src="./images/Ellipse-css.png"
+							alt="javaScript logo"
+							class="img-logo"
+						/>
+						<span class="lang-name">CSS</span>
 					</div>
 				</li>
 				<li class="frameworks skill-section">
@@ -254,6 +264,17 @@
 				</li>
 			</ul>
 		</section>
+
+		<!-- Section contact me-->
+		<footer class="contact-me">
+			<div class="contact-text">
+				<h2>Contact me</h2>
+				<p>
+					If you have an appication you are interested in developing, a feature
+					that you need built or a pooject that needs coding, i'd love to help
+					with it
+				</p>
+			</div>
+		</footer>
 	</body>
 </html>
-
