--- a/index.html
+++ b/index.html
@@ -276,10 +276,33 @@
 				</p>
 			</div>
 			<form action="https://formspree.io/f/mpzbayyq" method="post">
-				<input name="name" id="name" type="text" placeholder="Your name" maxlength="30" required>
-				<input name="email" id="email" type="email" placeholder="Your email address" required>
-				<textarea name="message" id="message" cols="30" rows="10" maxlength="500" required>Enter your message...</textarea>
-				<input class="submit-btn" type="submit" value="Get in Touch">
+				<input
+					name="name"
+					id="name"
+					type="text"
+					placeholder="Your name"
+					maxlength="30"
+					required
+				/>
+				<input
+					name="email"
+					id="email"
+					type="email"
+					placeholder="Your email address"
+					required
+				/>
+				<textarea
+					name="message"
+					id="message"
+					cols="30"
+					rows="10"
+					maxlength="500"
+					required
+				>
+					Enter your message...
+				</textarea
+				>
+				<input class="submit-btn btn" type="submit" value="Get in Touch" />
 			</form>
 		</footer>
 	</body>
