--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
 				<input
 					name="name"
 					id="name"
+					class="formElement"
 					type="text"
 					placeholder="Your name"
 					maxlength="30"
@@ -287,6 +288,7 @@
 				<input
 					name="email"
 					id="email"
+					class="formElement"
 					type="email"
 					placeholder="Your email address"
 					required
@@ -294,12 +296,13 @@
 				<textarea
 					name="message"
 					id="message"
+					class="formElement"
 					cols="30"
 					rows="10"
 					maxlength="500"
+					placeholder="Enter message here..."
 					required
 				>
-					Enter your message...
 				</textarea
 				>
 				<input class="submit-btn btn" type="submit" value="Get in Touch" />
