Added the style to form in contact me section

--- a/index.html
+++ b/index.html
@@ -302,9 +302,7 @@
 					maxlength="500"
 					placeholder="Enter message here..."
 					required
-				>
-				</textarea
-				>
+				></textarea>
 				<input class="submit-btn btn" type="submit" value="Get in Touch" />
 			</form>
 		</footer>
