--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 			rel="stylesheet"
 			href="./fontawesome-free-5.12.1-web/css/all.min.css"
 		/>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-214282801-2"></script>
+		<script>
+ 			 window.dataLayer = window.dataLayer || [];
+  			function gtag(){dataLayer.push(arguments);}
+  			gtag('js', new Date());
+
+  			gtag('config', 'UA-214282801-2');
+		</script>
+
 		<title>My Portfolio</title>
 	</head>
 	<body>
