Made changes for accessibility

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 			href="./fontawesome-free-5.12.1-web/css/all.min.css"
 		/>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-214282801-2"></script>
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-214282801-2"
+		></script>
 		<script>
- 			 window.dataLayer = window.dataLayer || [];
-  			function gtag(){dataLayer.push(arguments);}
-  			gtag('js', new Date());
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
 
-  			gtag('config', 'UA-214282801-2');
+			gtag("config", "UA-214282801-2");
 		</script>
 
 		<title>My Portfolio</title>
@@ -28,7 +33,7 @@
 			<nav class="navbar">
 				<div class="nav-center">
 					<div class="nav-header">
-						<h1 id="logo">My Logo</h1>
+						<h2 id="logo">My Logo</h2>
 						<button type="button" class="nav-toggle">
 							<i class="fas fa-bars"></i>
 						</button>
@@ -44,10 +49,10 @@
 			<!-- Hero section -->
 			<div class="hero">
 				<div class="banner">
-					<h2>
+					<h1>
 						i'm Muneeb <br />
 						Glad to see you!
-					</h2>
+					</h1>
 					<p>
 						i'm a software developer! I can help you build a product , feature
 						or website Look through some of my word and experience! If you like
@@ -355,12 +360,14 @@
 
 						<ul class="icons">
 							<li>
-								<a href="#" class="social-icon"
+								<a href="https://twitter.com/bhatmuneeb_mb" class="social-icon"
 									><i class="fab fa-twitter"></i
 								></a>
 							</li>
 							<li>
-								<a href="#" class="social-icon"
+								<a
+									href="https://www.linkedin.com/in/muneeb-ul-rehman-33903b159/"
+									class="social-icon"
 									><i class="fab fa-linkedin"></i
 								></a>
 							</li>
@@ -370,7 +377,7 @@
 								></a>
 							</li>
 							<li>
-								<a href="#" class="social-icon"
+								<a href="https://github.com/muneebulrehman" class="social-icon"
 									><i class="fab fa-github"></i
 								></a>
 							</li>
