Made changes for accessibility

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 							<div class="lang">
 								<img
 									src="./images/Ellipse-HTML.png"
-									alt="javaScript logo"
+									alt="HTML logo"
 									class="img-logo"
 								/>
 								<span class="lang-name">HTML</span>
@@ -411,7 +411,7 @@
 							<div class="lang">
 								<img
 									src="./images/Ellipse-css.png"
-									alt="javaScript logo"
+									alt="CSS logo"
 									class="img-logo"
 								/>
 								<span class="lang-name">CSS</span>
