--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								target="_blank"
 								rel="noreferrer noopener"
 								class="social-icon"
-								><i class="fab fa-twitter"></i
+								><i class="fab fa-twitter" aria-hidden="true"></i
 							></a>
 						</li>
 						<li>
@@ -79,12 +79,12 @@
 								target="_blank"
 								rel="noreferrer noopener"
 								class="social-icon"
-								><i class="fab fa-linkedin"></i
+								><i class="fab fa-linkedin" aria-hidden="true"></i
 							></a>
 						</li>
 						<li>
 							<a href="#" target="_blank" class="social-icon"
-								><i class="fab fa-medium"></i
+								><i class="fab fa-medium" aria-hidden="true"></i
 							></a>
 						</li>
 						<li>
@@ -93,7 +93,7 @@
 								target="_blank"
 								rel="noreferrer noopener"
 								class="social-icon"
-								><i class="fab fa-github"></i
+								><i class="fab fa-github" aria-hidden="true"></i
 							></a>
 						</li>
 					</ul>
@@ -361,24 +361,24 @@
 						<ul class="icons">
 							<li>
 								<a href="https://twitter.com/bhatmuneeb_mb" class="social-icon"
-									><i class="fab fa-twitter"></i
+									><i class="fab fa-twitter" aria-hidden="true"></i
 								></a>
 							</li>
 							<li>
 								<a
 									href="https://www.linkedin.com/in/muneeb-ul-rehman-33903b159/"
 									class="social-icon"
-									><i class="fab fa-linkedin"></i
+									><i class="fab fa-linkedin" aria-hidden="true"></i
 								></a>
 							</li>
 							<li>
 								<a href="#" class="social-icon"
-									><i class="fab fa-medium"></i
+									><i class="fab fa-medium" aria-hidden="true"></i
 								></a>
 							</li>
 							<li>
 								<a href="https://github.com/muneebulrehman" class="social-icon"
-									><i class="fab fa-github"></i
+									><i class="fab fa-github" aria-hidden="true"></i
 								></a>
 							</li>
 						</ul>
@@ -389,7 +389,7 @@
 					<ul class="my-skills">
 						<li class="skill-title">
 							<h3>Languages</h3>
-							<span class="drop-icon"><i class="fas fa-angle-down"></i> </span>
+							<span class="drop-icon"><i class="fas fa-angle-down" aria-hidden="true"></i> </span>
 						</li>
 						<li class="languages skill-section">
 							<div class="lang">
@@ -421,7 +421,7 @@
 							<div class="skill-title passive">
 								<h3>Frameworks</h3>
 								<span class="drop-icon"
-									><i class="fas fa-angle-right"></i>
+									><i class="fas fa-angle-right" aria-hidden="true"></i>
 								</span>
 							</div>
 						</li>
@@ -429,7 +429,7 @@
 							<div class="skill-title passive">
 								<h3>Skills</h3>
 								<span class="drop-icon"
-									><i class="fas fa-angle-right"></i>
+									><i class="fas fa-angle-right" aria-hidden="true"></i>
 								</span>
 							</div>
 						</li>
