Changed page title and added favicon icon

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 			gtag("config", "UA-214282801-2");
 		</script>
 
-		<title>My Portfolio</title>
+		<title>Muneeb Ul Rehman - Portfolio</title>
+		<!-- favicon -->
+		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<!-- Header -->
@@ -389,7 +391,9 @@
 					<ul class="my-skills">
 						<li class="skill-title">
 							<h3>Languages</h3>
-							<span class="drop-icon"><i class="fas fa-angle-down" aria-hidden="true"></i> </span>
+							<span class="drop-icon"
+								><i class="fas fa-angle-down" aria-hidden="true"></i>
+							</span>
 						</li>
 						<li class="languages skill-section">
 							<div class="lang">
