Changed aria-hidden to false for accessibility

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								target="_blank"
 								rel="noreferrer noopener"
 								class="social-icon"
-								><i class="fab fa-twitter" aria-hidden="true"></i
+								><i class="fab fa-twitter" aria-hidden="flase"></i
 							></a>
 						</li>
 						<li>
@@ -81,12 +81,12 @@
 								target="_blank"
 								rel="noreferrer noopener"
 								class="social-icon"
-								><i class="fab fa-linkedin" aria-hidden="true"></i
+								><i class="fab fa-linkedin" aria-hidden="flase"></i
 							></a>
 						</li>
 						<li>
 							<a href="#" target="_blank" class="social-icon"
-								><i class="fab fa-medium" aria-hidden="true"></i
+								><i class="fab fa-medium" aria-hidden="flase"></i
 							></a>
 						</li>
 						<li>
@@ -95,7 +95,7 @@
 								target="_blank"
 								rel="noreferrer noopener"
 								class="social-icon"
-								><i class="fab fa-github" aria-hidden="true"></i
+								><i class="fab fa-github" aria-hidden="flase"></i
 							></a>
 						</li>
 					</ul>
@@ -363,24 +363,24 @@
 						<ul class="icons">
 							<li>
 								<a href="https://twitter.com/bhatmuneeb_mb" class="social-icon"
-									><i class="fab fa-twitter" aria-hidden="true"></i
+									><i class="fab fa-twitter" aria-hidden="flase"></i
 								></a>
 							</li>
 							<li>
 								<a
 									href="https://www.linkedin.com/in/muneeb-ul-rehman-33903b159/"
 									class="social-icon"
-									><i class="fab fa-linkedin" aria-hidden="true"></i
+									><i class="fab fa-linkedin" aria-hidden="flase"></i
 								></a>
 							</li>
 							<li>
 								<a href="#" class="social-icon"
-									><i class="fab fa-medium" aria-hidden="true"></i
+									><i class="fab fa-medium" aria-hidden="flase"></i
 								></a>
 							</li>
 							<li>
 								<a href="https://github.com/muneebulrehman" class="social-icon"
-									><i class="fab fa-github" aria-hidden="true"></i
+									><i class="fab fa-github" aria-hidden="flase"></i
 								></a>
 							</li>
 						</ul>
@@ -392,7 +392,7 @@
 						<li class="skill-title">
 							<h3>Languages</h3>
 							<span class="drop-icon"
-								><i class="fas fa-angle-down" aria-hidden="true"></i>
+								><i class="fas fa-angle-down" aria-hidden="flase"></i>
 							</span>
 						</li>
 						<li class="languages skill-section">
@@ -425,7 +425,7 @@
 							<div class="skill-title passive">
 								<h3>Frameworks</h3>
 								<span class="drop-icon"
-									><i class="fas fa-angle-right" aria-hidden="true"></i>
+									><i class="fas fa-angle-right" aria-hidden="flase"></i>
 								</span>
 							</div>
 						</li>
@@ -433,7 +433,7 @@
 							<div class="skill-title passive">
 								<h3>Skills</h3>
 								<span class="drop-icon"
-									><i class="fas fa-angle-right" aria-hidden="true"></i>
+									><i class="fas fa-angle-right" aria-hidden="flase"></i>
 								</span>
 							</div>
 						</li>
