Made changes to form. Added label attribute

--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@
 					</p>
 				</div>
 				<form action="https://formspree.io/f/mpzbayyq" method="post">
+					<label for="name">Name</label>
 					<input
 						name="name"
 						id="name"
@@ -461,6 +462,8 @@
 						maxlength="30"
 						required
 					/>
+
+					<label for="email">Email</label>
 					<input
 						name="email"
 						id="email"
@@ -469,6 +472,8 @@
 						placeholder="Your email address"
 						required
 					/>
+
+					<label for="message">Leave your message here</label>
 					<textarea
 						name="message"
 						id="message"
