Added toggle functionality for the hamburger icon

--- a/index.html
+++ b/index.html
@@ -40,11 +40,19 @@
 							<i class="fas fa-bars"></i>
 						</button>
 					</div>
-					<ul class="nav-links">
-						<li><a href="#portfolio" class="nav-link">portfolio</a></li>
-						<li><a href="#about" class="nav-link">about</a></li>
-						<li><a href="#contact" class="nav-link">contact</a></li>
-					</ul>
+					<div class="mobile">
+						<div class="navbar-header">
+							<span class="nav-close" id="nav-close">
+								<i class="fas fa-times"></i>
+							</span>
+						</div>
+
+						<ul class="nav-links">
+							<li><a href="#portfolio" class="nav-link">portfolio</a></li>
+							<li><a href="#about" class="nav-link">about</a></li>
+							<li><a href="#contact" class="nav-link">contact</a></li>
+						</ul>
+					</div>
 				</div>
 			</nav>
 
@@ -488,5 +496,6 @@
 				</form>
 			</div>
 		</footer>
+		<script src="./script.js"></script>
 	</body>
 </html>
