when user click option menu disapear

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 						</div>
 
 						<ul class="nav-links">
-							<li><a href="#portfolio" class="nav-link">portfolio</a></li>
-							<li><a href="#about" class="nav-link">about</a></li>
-							<li><a href="#contact" class="nav-link">contact</a></li>
+							<li><a href="#portfolio" class="nav-link scroll-link">portfolio</a></li>
+							<li><a href="#about" class="nav-link scroll-link">about</a></li>
+							<li><a href="#contact" class="nav-link scroll-link">contact</a></li>
 						</ul>
 					</div>
 				</div>
