--- a/index.html
+++ b/index.html
@@ -35,22 +35,26 @@
 			<nav class="navbar">
 				<div class="nav-center">
 					<div class="nav-header">
-						<h2 id="logo">My Logo</h2>
+						<h2 id="logo"><a href="#home">Muneeb Ul Rehman</a></h2>
 						<button type="button" class="nav-toggle">
 							<i class="fas fa-bars"></i>
 						</button>
 					</div>
 					<div class="mobile">
-						<div class="navbar-header">
+						<div class="navbar-header hidden">
 							<span class="nav-close" id="nav-close">
 								<i class="fas fa-times"></i>
 							</span>
 						</div>
 
 						<ul class="nav-links">
-							<li><a href="#portfolio" class="nav-link scroll-link">portfolio</a></li>
+							<li>
+								<a href="#portfolio" class="nav-link scroll-link">portfolio</a>
+							</li>
 							<li><a href="#about" class="nav-link scroll-link">about</a></li>
-							<li><a href="#contact" class="nav-link scroll-link">contact</a></li>
+							<li>
+								<a href="#contact" class="nav-link scroll-link">contact</a>
+							</li>
 						</ul>
 					</div>
 				</div>
