Fixed overlay bug in index.html

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 			<!-- Following heading is being added to remove linter errors -->
 			<h2 class="hidden">Heading</h2>
 		</section>
+		<div class="overlay hidden"></div>
 
 		<!-- End of work section -->
 
