--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			function gtag() {
 				dataLayer.push(arguments);
 			}
-			gtag("js", new Date());
+			gtag('js', new Date());
 
-			gtag("config", "UA-214282801-2");
+			gtag('config', 'UA-214282801-2');
 		</script>
 
 		<title>Muneeb Ul Rehman - Portfolio</title>
