--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 						to help with it
 					</p>
 				</div>
-				<form action="https://formspree.io/f/mpzbayyq" method="post" id="form">
+				<form action="https://formspree.io/f/mpzbayyq" method="POST" id="form">
 					<label for="name">Name</label>
 					<input
 						name="name"
